// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`copy2.sql > line 1 1`] = `
[
  "CREATE TEMP TABLE x (
	a serial,
	b int,
	c text not null default 'stuff',
	d text,
	e text
) ",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 18,
              "relname": "x",
              "relpersistence": "t",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 23,
                  "typeName": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "serial",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 34,
                  "typeName": {
                    "location": 36,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_NOTNULL",
                        "location": 49,
                      },
                    },
                    {
                      "Constraint": {
                        "contype": "CONSTR_DEFAULT",
                        "location": 58,
                        "raw_expr": {
                          "A_Const": {
                            "location": 66,
                            "sval": {
                              "sval": "stuff",
                            },
                          },
                        },
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 42,
                  "typeName": {
                    "location": 44,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "d",
                  "is_local": true,
                  "location": 76,
                  "typeName": {
                    "location": 78,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "e",
                  "is_local": true,
                  "location": 85,
                  "typeName": {
                    "location": 87,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copy2.sql > line 9 1`] = `
[
  "CREATE FUNCTION fn_x_before () RETURNS TRIGGER AS '
  BEGIN
		NEW.e := ''before trigger fired''::text;
		return NEW;
	END;
' LANGUAGE plpgsql",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "fn_x_before",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
  BEGIN
		NEW.e := 'before trigger fired'::text;
		return NEW;
	END;
",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 47,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 125,
                },
              },
            ],
            "returnType": {
              "location": 39,
              "names": [
                {
                  "String": {
                    "sval": "trigger",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copy2.sql > line 16 1`] = `
[
  "CREATE FUNCTION fn_x_after () RETURNS TRIGGER AS '
  BEGIN
		UPDATE x set e=''after trigger fired'' where c=''stuff'';
		return NULL;
	END;
' LANGUAGE plpgsql",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "fn_x_after",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
  BEGIN
		UPDATE x set e='after trigger fired' where c='stuff';
		return NULL;
	END;
",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 46,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 142,
                },
              },
            ],
            "returnType": {
              "location": 38,
              "names": [
                {
                  "String": {
                    "sval": "trigger",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copy2.sql > line 23 1`] = `
[
  "CREATE TRIGGER trg_x_after AFTER INSERT ON x
FOR EACH ROW EXECUTE PROCEDURE fn_x_after()",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTrigStmt": {
            "events": 4,
            "funcname": [
              {
                "String": {
                  "sval": "fn_x_after",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 43,
              "relname": "x",
              "relpersistence": "p",
            },
            "row": true,
            "trigname": "trg_x_after",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copy2.sql > line 26 1`] = `
[
  "CREATE TRIGGER trg_x_before BEFORE INSERT ON x
FOR EACH ROW EXECUTE PROCEDURE fn_x_before()",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTrigStmt": {
            "events": 4,
            "funcname": [
              {
                "String": {
                  "sval": "fn_x_before",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 45,
              "relname": "x",
              "relpersistence": "p",
            },
            "row": true,
            "timing": 2,
            "trigname": "trg_x_before",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copy2.sql > line 29 1`] = `
[
  "COPY x (a, b, c, d, e) FROM STDIN",
  {
    "stmts": [
      {
        "stmt": {
          "CopyStmt": {
            "attlist": [
              {
                "String": {
                  "sval": "a",
                },
              },
              {
                "String": {
                  "sval": "b",
                },
              },
              {
                "String": {
                  "sval": "c",
                },
              },
              {
                "String": {
                  "sval": "d",
                },
              },
              {
                "String": {
                  "sval": "e",
                },
              },
            ],
            "is_from": true,
            "relation": {
              "inh": true,
              "location": 5,
              "relname": "x",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copy2.sql > line 31 1`] = `
[
  "select id, text_value, ts_value from copy_default",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 37,
                  "relname": "copy_default",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "id",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 11,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "text_value",
                          },
                        },
                      ],
                      "location": 11,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 23,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ts_value",
                          },
                        },
                      ],
                      "location": 23,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copy2.sql > line 33 1`] = `
[
  "truncate copy_default",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 9,
                  "relname": "copy_default",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`copy2.sql > line 36 1`] = `
[
  "copy (select 1 as test) TO stdout with (default '\\D')",
  {
    "stmts": [
      {
        "stmt": {
          "CopyStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "\\D",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "default",
                  "location": 40,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 13,
                      "name": "test",
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 13,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
